--- a/client/frontend/package.json
+++ b/client/frontend/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "sass": "^1.53.0",
+    "sass-loader": "^13.0.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
